force-app/main/default/objects/User/fields/CIAMId__c.field-meta.xml
<CustomField>
    <fullName>CIAMId__c</fullName>
    <label>CIAMId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>