force-app/main/default/objects/User/fields/EducationConsent__c.field-meta.xml
<CustomField>
    <fullName>EducationConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education Consent</label>
    <type>Checkbox</type>
</CustomField>