force-app/main/default/objects/User/fields/HasEmailOptedOut__c.field-meta.xml
<CustomField>
    <fullName>HasEmailOptedOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasEmailOptedOut</label>
    <type>Checkbox</type>
</CustomField>