force-app/main/default/objects/User/fields/IsPasswordChanged__c.field-meta.xml
<CustomField>
    <fullName>IsPasswordChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Password Changed</label>
    <type>Checkbox</type>
</CustomField>