force-app/main/default/objects/User/fields/LicenseAgreementConsent__c.field-meta.xml
<CustomField>
    <fullName>LicenseAgreementConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Agreement Consent</label>
    <type>Checkbox</type>
</CustomField>