force-app/main/default/objects/User/fields/MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry__c</fullName>
    <formula>Contact.MailingCountry</formula>
    <label>Mailing Country</label>
    <type>Text</type>
</CustomField>