force-app/main/default/objects/User/fields/MedicalId__c.field-meta.xml
<CustomField>
    <fullName>MedicalId__c</fullName>
    <label>Medical Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>