force-app/main/default/objects/User/fields/MigratedFromCDC__c.field-meta.xml
<CustomField>
    <fullName>MigratedFromCDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated From CDC?</label>
    <type>Checkbox</type>
</CustomField>