force-app/main/default/objects/User/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <length>80</length>
    <type>Text</type>
</CustomField>